# smsgate

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  config.toml.example  partitions_ota.csv  sdkconfig.defaults
.github/scripts/: gen_config.py
.github/workflows/: ci.yml
fuzz/fuzz_targets/: command_parse.rs
src/: config.rs  creds.rs  diagnostics.rs  lib.rs  log_clock.rs  log_ring.rs  main.rs  mms.rs  ota.rs  text.rs
src/boards/: mod.rs  ta7670x.rs
src/bridge/: call_handler.rs  forwarder.rs  poller.rs  reply_router.rs  sms_handler.rs
src/commands/: mod.rs
src/i18n/: en.rs  mod.rs  zh.rs
src/im/: mod.rs
src/modem/: mod.rs  urc.rs
src/persist/: mem.rs  mod.rs  nvs.rs
src/sms/: codec.rs  concat.rs  mod.rs  sender.rs
src/testing/: mocks.rs  mod.rs  scenario.rs
tests/: test_a76xx_voice.rs  test_at.rs  test_at_memory.rs  test_call_handler.rs  test_codec.rs  test_codec_memory.rs  test_commands.rs  test_concat.rs  test_concat_memory.rs  test_creds.rs  test_diagnostics.rs  test_flash_log_memory.rs  test_flash_log_ring.rs  test_forwarder.rs  test_forwarder_memory.rs  test_i18n_memory.rs  test_log_clock.rs  test_log_command_memory.rs  test_log_ring.rs  test_ota.rs  test_persist.rs  test_poller.rs  test_poller_memory.rs  test_qhttp_memory.rs  test_scenarios.rs  test_sender.rs  test_sender_memory.rs  test_sim_pin.rs  test_sms_handler.rs  test_sms_handler_memory.rs  test_telegram_health.rs  test_telegram_memory.rs  test_telegram_request.rs  test_telegram_types.rs  test_urc.rs
tests/support/: alloc_counter.rs
tools/: build_ota_images.sh
(+17 files in other folders)
