[workspace]
members = ["."]
resolver = "2"

[package]
name = "smsgate"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "ESP32 firmware that bridges SMS and Telegram — two-way forwarding via cellular modem"
repository = "https://github.com/Kiyo5hi/smsgate"

[features]
default = ["esp32"]
esp32 = [
    "dep:esp-idf-hal",
    "dep:esp-idf-svc",
    "dep:esp-idf-sys",
]
testing = []

[dependencies]
# ESP32 HAL (omitted for host-side test builds)
esp-idf-hal = { version = "0.46", features = ["std"],      optional = true }
esp-idf-svc = { version = "0.52", features = ["std"],      optional = true }
esp-idf-sys  = { version = "0.37", features = ["binstart"], optional = true }

# Shared — compile on both ESP32 and x86 host
log      = "0.4"
thiserror = "2"
serde    = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow   = "1"

[build-dependencies]
embuild = "0.33"
toml    = "1"

[dev-dependencies]
env_logger = "0.11"

[profile.release]
opt-level = "s"
lto        = true

# ---- ESP-IDF version ----
[package.metadata.esp-idf-sys]
esp_idf_version = "v5.2"
